add htcondor max runtime field
